--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@
 .full-banner{
     width: 100%;
     height: 100vh;
+    background-position: center;
     background-image: url("../asset/image/background.jpg"), linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5));
     background-blend-mode: overlay;
     display: flex;
@@ -70,4 +71,98 @@
     color: rgb(0, 0, 0);
     font-size: 18px;
     margin: 10px;
+}
+
+
+/* Service List */
+/* Left Side */
+
+.Service-container{
+    width: 100%;
+    height: 100vh;
+    padding: 20px;
+    background-image: url(../asset/image/footer-bg.png), linear-gradient(rgba(0,0,0,0.9), rgba(0,0,0,0.9));
+    background-blend-mode: overlay;
+    display: flex;    
+}
+
+.service-btn{
+    margin-top: 100px;
+    margin-bottom: 10px;
+    border: none;
+    background-color: rgb(209, 8, 8);
+    padding: 15px 30px;
+    font-weight: 600px;
+    color: rgb(0, 0, 0);
+    font-size: 18px;
+    border-radius: 50px;
+}
+.service-title{
+    font-size: 45px;
+    font-weight: bold;
+    padding: 10px;
+    color: white;
+}
+.service-description{
+    font-size: 20px;
+    padding: 10px;
+    margin-bottom: 13px;
+    color: white;
+}
+.lst{
+    font-size: 18px;
+    padding: 10px;
+    margin-left: 16px;
+    margin-bottom: 20px;
+    color: white;
+}
+.left-container{
+    margin-left: 10px;
+}
+.author-pic{
+    color: white;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    border-right: 1px solid red;
+}
+.author-details{
+    display: flex;
+    align-items: center;
+}
+.btn-moreservices{
+    margin: auto;
+    border: none;
+    background-color: rgb(209, 8, 8);
+    padding: 15px 30px;
+    font-weight: 400px;
+    color: rgb(255, 255, 255);
+    font-size: 15px;
+    border-radius: 50px;
+}
+.author-image{
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+}
+.author-name{
+    padding-left: 10px;
+    padding-right: 80px;
+}
+.btn-more{
+    padding-left: 15px;
+}
+
+/* Right Side */
+
+.web-graphic{
+    display: flex;
+    color: white;
+}
+.web-dev{
+    background-image: url(../asset/icons/coding.png);
+}
+.seo-digital{
+    display: flex;
+    color: white;
 }
