--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@
     height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
-    background-image: url("../asset/image/background.jpg"), linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5));
+    background-image: url("./asset/image/background.jpg"), linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5));
     background-blend-mode: overlay;
     display: flex;
     align-items: center;
@@ -84,7 +84,7 @@
     width: 97%;
     height: 750px;
     padding: 20px;
-    background-image: url(../asset/image/footer-bg.png), linear-gradient(rgba(0,0,0,1), rgba(0,0,0,0.9));
+    background-image: url(./asset/image/footer-bg.png), linear-gradient(rgba(0,0,0,1), rgba(0,0,0,0.9));
     background-blend-mode: overlay;
     display: flex;  
 }
@@ -316,7 +316,7 @@
     width: 78%;
     height: 36vh;
     padding: 148px;
-    background-image: url(../asset/image/footer-bg.png), linear-gradient(rgba(0,0,0,1), rgba(0,0,0,0.9));
+    background-image: url(./asset/image/footer-bg.png), linear-gradient(rgba(0,0,0,1), rgba(0,0,0,0.9));
     background-blend-mode: overlay;
 }
 .footer-section{
